--- a/arch/arm64/configs/pancake_defconfig
+++ b/arch/arm64/configs/pancake_defconfig
@@ -43,7 +43,7 @@ CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
-# CONFIG_COMPAT_BRK is not set
+CONFIG_ASLR_NONE=y
 CONFIG_PROFILING=y
 CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
