--- a/arch/arm64/configs/pancake_defconfig
+++ b/arch/arm64/configs/pancake_defconfig
@@ -539,6 +539,7 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ION=y
+CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCOM_GENI_SE=y
