--- a/arch/arm64/configs/pancake_defconfig
+++ b/arch/arm64/configs/pancake_defconfig
@@ -73,6 +73,7 @@ CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
 CONFIG_VMSTAT_INTERVAL=20
 CONFIG_SECCOMP=y
+# CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
