--- a/arch/arm64/configs/pancake_defconfig
+++ b/arch/arm64/configs/pancake_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Pancake"
+CONFIG_LOCALVERSION="-Pancake 🥞"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
