--- a/arch/arm64/configs/pancake_defconfig
+++ b/arch/arm64/configs/pancake_defconfig
@@ -257,6 +257,7 @@ CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
+# CONFIG_BT_DEBUGFS is not set
 CONFIG_MSM_BT_POWER=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_CERTIFICATION_ONUS=y
@@ -365,10 +366,6 @@ CONFIG_SPI=y
 CONFIG_SPI_QCOM_GENI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
-CONFIG_SPMI_SIMULATOR=y
-CONFIG_PM8150_PMIC_SIMULATOR=y
-CONFIG_PM8150B_PMIC_SIMULATOR=y
-CONFIG_PM8150L_PMIC_SIMULATOR=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_PTP_1588_CLOCK=y
 CONFIG_PINCTRL_SX150X=y
