--- a/arch/arm64/configs/pancake_defconfig
+++ b/arch/arm64/configs/pancake_defconfig
@@ -120,7 +120,8 @@ CONFIG_NET_IPVTI=y
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
-# CONFIG_INET_DIAG is not set
+CONFIG_INET_UDP_DIAG=y
+CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 # CONFIG_TCP_CONG_BIC is not set
 # CONFIG_TCP_CONG_WESTWOOD is not set
@@ -356,6 +357,7 @@ CONFIG_SERIAL_MSM_GENI=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
+CONFIG_DIAG_CHAR=y
 CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
 CONFIG_I2C_CHARDEV=y
@@ -664,7 +666,6 @@ CONFIG_ESOC_MDM_DBG_ENG=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
-# CONFIG_F2FS_STAT_FS is not set
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FS_VERITY=y
